			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * MODIFIED: Instantiation by cleanup-handler of call_cleanup/[2,3] has
    been made visible to the outside world.   Ulrich Neumerkel.

  * DOCS: various minor updates.  Ulrich Neumerkel.

  * FIXED: error message when trying to reposition user streams and
    the type-property for user streams.  Ulrich Neumerkel.

  * ENHANCED: intended caching of character-code -> atom was actually
    not functional.

  * FIXED: Possible crash in read/1.   Ulrich Neumerkel.

  * ENHANCED: cyclic/1 and acyclic/1 now use last-argument optimization and
    are protected against interrupts.   Ulrich Neumerkel.

  * FIXED: Type errors generated by PL_get_<int-type>_ex() used by various
    built-ins.  If the argument is an integer out of range of the C-type,
    it throws a error(representation_error(CType), _) rather than
    a type_error.  Ulrich Neumerkel.


=============================
VERSION 5.6.37 (Jul 09, 2007)
=============================

  * FIXED: Bug#282: Possible crash in PL_close_query(). 
    Bernhard Kirchlechner.

  * PORT: Included various Cygwin issues contributed by Corinna Vinschen.

  * FIXED: Remove choicepoint from flatten/3.  Mike Elston.

  * FIXED: Handle seek/4 to negative positions in the object (now throws
    a domain error).

  * ADDED: Arithmetic function +/1.  Mike Elston,

  * FIXED: nicely maintain time in profiler/2, which is used by tprofile/1.

  * ADDED: library(error): types positive_integer and negative_integer.

  * ADDED: library(thread), providing some high-level concurrency
    predicates.

  * FIXED: Bug#291: format_time/3 using %Z for different character
    sets.  I'm not sure about this fix.  I cannot reproduce the problem.